Switch to testcontainer.